--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chat-app",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
+"scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend"
+    "start": "npm run start --prefix backend",
+    "frontend-start": "npm run dev --prefix frontend"  
   },
   "keywords": [],
   "author": "",
